tweak style guide

--- a/src/pages/styles/index.mdx
+++ b/src/pages/styles/index.mdx
@@ -16,8 +16,10 @@ Collection of styles for this website.
 
 ## Typography
 
-- Primary EN font: Source Serif 4
-- Primary TH font: IBM Plex Sans Thai Looped
+- EN fonts: [Source Serif 4](https://fonts.google.com/specimen/Source+Serif+4)
+- TH fonts: [IBM Plex Sans Thai Looped](https://fonts.google.com/specimen/IBM+Plex+Sans+Thai+Looped)
+
+<div class="my-8">&nbsp;</div>
 
 # Heading 1
 
@@ -30,11 +32,11 @@ Collection of styles for this website.
 
 <a href="https://en.wikipedia.org/wiki/Typography" target="_blank">Typography</a> plays a crucial role in web design, serving as both a functional and aesthetic element. Well-chosen fonts and proper text formatting enhance readability and user experience. When designing websites, it's important to maintain consistent typography across different sections while ensuring adequate contrast between text and background colors.
 
-Line height, letter spacing, and paragraph margins all contribute to creating a pleasant reading experience. Additionally, responsive typography that adapts to different screen sizes has become essential in our mobile-first world.
+[จักรยาน](https://th.wikipedia.org/wiki/จักรยาน)เป็นพาหนะที่เป็นมิตรกับสิ่งแวดล้อมและมีประโยชน์ต่อ[สุขภาพ](https://www.who.int/thailand)อย่างมาก การปั่นจักรยานช่วยเสริมสร้างกล้ามเนื้อและระบบหัวใจและหลอดเลือด อีกทั้งยังเป็นกิจกรรมที่สนุกสนานที่สามารถทำได้ทั้งคนเดียวหรือกับครอบครัวและเพื่อนฝูง การปั่นจักรยานยังช่วยลดการปล่อยก๊าซคาร์บอนไดออกไซด์และลดปัญหาการจราจรติดขัดในเมืองใหญ่อีกด้วย
 
-[จักรยาน](https://th.wikipedia.org/wiki/จักรยาน)เป็นพาหนะที่เป็นมิตรกับสิ่งแวดล้อมและมีประโยชน์ต่อ[สุขภาพ](https://www.who.int/thailand)อย่างมาก การปั่นจักรยานช่วยเสริมสร้างกล้ามเนื้อและ[ระบบหัวใจและหลอดเลือด](https://www.heart.org/) อีกทั้งยังเป็นกิจกรรมที่สนุกสนานที่สามารถทำได้ทั้งคนเดียวหรือกับครอบครัวและเพื่อนฝูง การปั่นจักรยานยังช่วยลดการปล่อยก๊าซคาร์บอนไดออกไซด์และลดปัญหาการจราจรติดขัดในเมืองใหญ่อีกด้วย
+คำกล่าวของ John Howard ที่ว่า "The bicycle is a curious vehicle. Its passenger is its engine."
+อาจจะเป็นแรงบันดาลใจให้หลายคน เพียงแต่ฉันใช้มันในย่อหน้านี้เพื่อแสดงผลข้อความภาษาไทยร่วมกับภาษาอังกฤษเท่านั้น
 
-ในประเทศไทย วัฒนธรรมการปั่นจักรยานได้รับความนิยมเพิ่มขึ้นอย่างต่อเนื่องในช่วงหลายปีที่ผ่านมา หลายเมืองได้พัฒนาเส้นทางจักรยานและสิ่งอำนวยความสะดวกสำหรับนักปั่น ทำให้ผู้คนหันมาใช้จักรยานในการเดินทางระยะสั้นและการออกกำลังกายมากขึ้น นอกจากนี้ยังมีชมรมจักรยานและกิจกรรมปั่นจักรยานเพื่อการกุศลที่จัดขึ้นอย่างสม่ำเสมอ ช่วยสร้างความสัมพันธ์ที่ดีในชุมชน
 
 ## Lists
 
@@ -72,6 +74,8 @@ function Counter() {
   return <button onClick={() => setCount(count + 1)}>{count}</button>;
 }
 ```
+
+Kbd tag can be used to display keyboard keys: <kbd>Cmd</kbd> + <kbd>k</kbd> or <kbd>Ctrl</kbd> + <kbd>k</kbd>
 
 ---
 
