tweak style guide 2

--- a/src/pages/styles/index.mdx
+++ b/src/pages/styles/index.mdx
@@ -10,7 +10,7 @@ import WarningMessage from '../../components/WarningMessage.astro';
 
 # Styles
 
-Collection of styles for this website.
+Collection of common styles used in this website.
 
 ---
 
@@ -18,6 +18,10 @@ Collection of styles for this website.
 
 - EN fonts: [Source Serif 4](https://fonts.google.com/specimen/Source+Serif+4)
 - TH fonts: [IBM Plex Sans Thai Looped](https://fonts.google.com/specimen/IBM+Plex+Sans+Thai+Looped)
+
+I love serif fonts. Source Serif 4 is my pick, but it doesn't come with Thai characters.
+So I choose IBM Plex Sans Thai Looped as a fallback font for the Thai characters.
+I think they look great together &mdash; not too different in x-height, contrast, and overall appearance.
 
 <div class="my-8">&nbsp;</div>
 
@@ -30,15 +34,15 @@ Collection of styles for this website.
 #### Heading 4
 
 
-<a href="https://en.wikipedia.org/wiki/Typography" target="_blank">Typography</a> plays a crucial role in web design, serving as both a functional and aesthetic element. Well-chosen fonts and proper text formatting enhance readability and user experience. When designing websites, it's important to maintain consistent typography across different sections while ensuring adequate contrast between text and background colors.
+<a href="https://en.wikipedia.org/wiki/Typography" target="_blank">Typography</a> plays a crucial role in web design, serving as both a functional and aesthetic element. Well-chosen fonts and proper text formatting enhance readability and user experience. When designing websites, it's ~~important~~ to maintain **consistent typography** across different sections while ensuring adequate contrast between text and background colors.
 
-[จักรยาน](https://th.wikipedia.org/wiki/จักรยาน)เป็นพาหนะที่เป็นมิตรกับสิ่งแวดล้อมและมีประโยชน์ต่อ[สุขภาพ](https://www.who.int/thailand)อย่างมาก การปั่นจักรยานช่วยเสริมสร้างกล้ามเนื้อและระบบหัวใจและหลอดเลือด อีกทั้งยังเป็นกิจกรรมที่สนุกสนานที่สามารถทำได้ทั้งคนเดียวหรือกับครอบครัวและเพื่อนฝูง การปั่นจักรยานยังช่วยลดการปล่อยก๊าซคาร์บอนไดออกไซด์และลดปัญหาการจราจรติดขัดในเมืองใหญ่อีกด้วย
+[จักรยาน](https://th.wikipedia.org/wiki/จักรยาน)เป็นพาหนะที่เป็นมิตรกับสิ่งแวดล้อมและมีประโยชน์ต่อ[สุขภาพ](https://www.who.int/thailand)อย่างมาก การปั่นจักรยานช่วยเสริมสร้างกล้ามเนื้อและระบบหัวใจและหลอดเลือด~~อีกทั้ง~~ยังเป็นกิจกรรมที่สนุกสนานที่สามารถทำได้ทั้งคนเดียวหรือกับครอบครัวและเพื่อนฝูง การปั่นจักรยานยังช่วยลดการปล่อยก๊าซคาร์บอนไดออกไซด์และลดปัญหาการจราจรติดขัดในเมืองใหญ่อีกด้วย
 
-คำกล่าวของ John Howard ที่ว่า "The bicycle is a curious vehicle. Its passenger is its engine."
+**คำกล่าว**ของ John Howard ที่ว่า *"The bicycle is a curious vehicle. Its passenger is its engine."*
 อาจจะเป็นแรงบันดาลใจให้หลายคน เพียงแต่ฉันใช้มันในย่อหน้านี้เพื่อแสดงผลข้อความภาษาไทยร่วมกับภาษาอังกฤษเท่านั้น
 
 
-## Lists
+## Lists / ลิสต์
 
 ### Unordered List
 - First item
@@ -60,7 +64,7 @@ Collection of styles for this website.
 >
 > Multiple paragraphs can be included in a blockquote by adding a blank line with a '>' character.
 
-## Code
+## Code / โค้ด
 
 Inline code can be written like `console.log('Hello, World!')`.
 
