tweak style guide 3

--- a/src/pages/styles/index.mdx
+++ b/src/pages/styles/index.mdx
@@ -85,8 +85,12 @@ Kbd tag can be used to display keyboard keys: <kbd>Cmd</kbd> + <kbd>k</kbd> or <
 
 ## Custom Components
 
-`<WarningMessage>`
+`<WarningMessage>` &mdash; I use this component to draw attention to important information.
 
 <WarningMessage title="Warning">
   This is a warning message.
 </WarningMessage>
+
+`<Picture>` &mdash; My attempt to utilize Astro's `<Image>` component with sugar on top like caption and full-bleed layout support.
+
+Example: TBD
