--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -8,7 +8,7 @@ thumbnail: /images/uses/content/thumbnail.jpg
 ---
 # Tools I use
 
-Inspired by [uses.tech](https://uses.tech) where developers share their hardware/software/tools they use regularly. Here are my tools.
+Inspired by [uses.tech](https://uses.tech) where developers share their hardware, software and tools they use regularly. Here are my tools.
 
 ## Software
 
