update uses page

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -25,9 +25,9 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
 ![terminal screenshot](../../pages/uses/content/terminal.jpg)
 
-* Code editor: [VSCode](https://code.visualstudio.com/) (with Vim emulation)
+* Code editor: [Cursor](https://www.cursor.com/)
   * Theme: the official [GitHub](https://github.com/primer/github-vscode-theme) themes. I use both dark and light themes, depending on the surrounding light.
-  * Here is a full post on how I set up my VSCode: [My VSCode setup for 2023](https://armno.in.th/blog/vscode-setup-2023/).
+  * I wrote a blog post on how I set up my VSCode: [My VSCode setup for 2023](https://armno.in.th/blog/vscode-setup-2023/), which apply to Cursor as well.
 * [Vim](https://www.vim.org/) for a quick file editing from the terminal.&#x20;
   * I use [vim-plug](https://github.com/junegunn/vim-plug) as a plugin manager for Vim. Here is my [`.vimrc`](https://github.com/armno/dotfiles/blob/master/.vimrc) file.&#x20;
 * Git: I use command line Git with [delta](https://github.com/dandavison/delta) to render diffs and logs
@@ -63,26 +63,22 @@ Things I used in the past that are worth mentioning.
 
 ## Hardware
 
-* Computers: [13-inch Macbook Air M2](https://support.apple.com/en-us/111867) at work. At home I have a [2013 13-inch MakBook Pro](https://support.apple.com/kb/sp691?locale=th_TH), but this one is rarely used nowadays.\
+* Computer: [13-inch Macbook Air M2](https://support.apple.com/en-us/111867)\
   ![](../../pages/uses/content/macbook-air-m2.jpg)
 * Monitor: a [Samsung 28" UR55 UHD 4K Monitor](https://www.samsung.com/th/business/monitors/ur55/lu28r550uqexxt/) mounted with an [NB-F80 Monitor arm](https://www.google.com/search?q=nb-f80+monitor+arm).\
   ![](../../pages/uses/content/monitor.jpg)
 * Keyboard: Corne wireless split keyboard. I wrote about it here: [Building a Wireless Corne Keyboard](https://armno.in.th/blog/building-a-wireless-corne-keyboard/) and [Low Profile Wireless Corne Keyboard](https://armno.in.th/blog/low-profile-wireless-corne-keyboard/).\
   ![](../../pages/uses/content/corne-low-profile-mbk-keycaps.jpg)
-* Mouse: [Logitech MX Anywhere 3S](https://www.logitech.com/en-us/products/mice/mx-anywhere-3s.910-006926.html?sp=1\&searchclick=logi)
+* Mouse: [Ugreen Bluetooth mouse](https://shopee.co.th/ugreen.th/18553818774). Nothing special with this one but it checks all my needs for a mouse: having Bluetooth and being a silent mouse.
 * Headphones: I have ~~a few~~ too many of them for my various use cases
   * [Sony WH-1000XM4](https://www.sony.co.th/en/electronics/headband-headphones/wh-1000xm4) for working in a noisy environment
   * [Audio-Technica M50x](https://armno.in.th/2015/08/04/audio-technica-ath-m50x/) with [Audirect Beam 2se DAC/Amp](https://www.google.com/search?q=Audirect+Beam+2se+DAC) for music listening
-  * [JBL Quantum 100](https://th.jbl.com/gaming/QUANTUM100.html) for video calls and meetings. This one has a really good mic!
-  * [Soundpeats Air3](https://us.soundpeats.com/products/air3) for commuting and workouts\
+  * [Airpods 4 ANC](https://www.apple.com/airpods-4/) for meetings and workouts\
     ![](../../pages/uses/content/sony-xm4.jpg)\
     ![](../../pages/uses/content/headphones.jpg)
 
 ### Other
 
-Not something I use everyday, but still worth mentioning.
-
-* Digital camera: Fujifilm XT-20 digital camera with a TTArtisan 50mm f/1.2 manual focus lense\
-  ![](../../pages/uses/content/fuji.jpg)
-* Bike: [2022 Nich Faith 2](https://www.nichcycling.com/pages/faith2) road bike. I use it for commuting to work sometimes and for a weekend long ride.\
-  ![](../../pages/uses/content/nich-f2.jpg)
+* Digital camera: Fujifilm XT-20 digital camera with a Fujifilm XC 35mm f/2.0 lens.
+* Bike: 2016 Lapierre Xelius SL.\
+  ![](../../pages/uses/content/lapierre-xelius-sl-2016.jpg)
