update uses page

--- a/src/pages/uses/index.mdx
+++ b/src/pages/uses/index.mdx
@@ -14,7 +14,7 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
 ### Programming
 
-* Terminal: I use [iTerm2](https://www.iterm2.com/version3.html) with
+* Terminal: I use [Ghostty](https://ghostty.org/) with
   * [zsh](https://www.zsh.org/) and with [Starship](https://starship.rs/) prompt
   * [base16-shell](https://github.com/chriskempson/base16-shell) for terminal colors
   * [zoxide](https://github.com/ajeetdsouza/zoxide) as a replacement for `cd` command
@@ -52,10 +52,10 @@ Inspired by [uses.tech](https://uses.tech) where developers share their hardware
 
 Things I used in the past that are worth mentioning.
 
+* [iTerm2](https://iterm2.com/) my main terminal app for 10+ years
 * [oh-my-zsh](https://ohmyz.sh/) and [oh-my-posh](https://ohmyposh.dev/) zsh frameworks.
 * [z](https://github.com/rupa/z) - replaced by zoxide
 * [kitty](https://sw.kovidgoyal.net/kitty/) is a GPU-accelerated terminal app and it's much faster than iTerm. The only thing that stops me from using it is that it doesn't render as beautiful text as in iTerm, probably because of the lack of supporting [sub-pixel antialiasing](https://github.com/kovidgoyal/kitty/issues/214).
-* [Cursor](https://cursor.sh/) is basically VSCode with AI features which I really liked. But paying 20$ a month for a code editor is a no-go for me.
 * [Alfred](https://www.alfredapp.com/) - I used Alfred for many years until I found Raycast. Thanks Alfred!
 * [BetterTouchTool](https://folivora.ai/) for shortcuts, automation.
 
